COMMITTING UI level changes

--- a/MVCHome/sample/sample/Web.config
+++ b/MVCHome/sample/sample/Web.config
@@ -15,6 +15,7 @@
     <httpRuntime targetFramework="4.6" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+	  <add name="Ajax" verb="POST,GET" path="ajax/*.ashx" type="Ajax.PageHandlerFactory, Ajax"/>
     </httpModules>
   </system.web>
   <runtime>
